# pyPID

./: .gitignore  LICENSE  README.md  pidMods.md  pyproject.toml
examples/: interactive_tuning.ipynb  tuning_demo.ipynb
pypid/: __init__.py  alarms.py  pid.py  plcIOscaling.md  scaling.py  scheduler.py  simulation.py
tests/: test_alarms.py  test_pid.py  test_scaling.py  test_simulation.py
