[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypid"
version = "0.1.0"
description = "Enhanced PID controller with modes, alarms, scaling, and FOPDT simulation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Bill Sneddon"},
]
keywords = ["pid", "controller", "control", "process", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
examples = ["jupyter", "matplotlib", "plotly", "pandas"]
dev = ["pytest>=7.0", "ruff"]

[tool.setuptools.packages.find]
include = ["pypid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
